# clear-msig

./: Cargo.toml  Quasar.toml  README.md
cli/: Cargo.toml
cli/src/: accounts.rs  config.rs  instructions.rs  main.rs  message.rs  output.rs  params.rs  resolve.rs  rpc.rs  signing.rs
cli/src/commands/: config.rs  intent.rs  proposal.rs  wallet.rs
programs/clear-wallet/: Cargo.toml  Quasar.toml
programs/clear-wallet/client/: Cargo.toml
programs/clear-wallet/client/src/: intent_builder.rs  intent_json.rs  lib.rs  pda.rs
programs/clear-wallet/src/: lib.rs  tests.rs
programs/clear-wallet/src/instructions/: approve.rs  cancel.rs  cleanup_proposal.rs  create_wallet.rs  execute.rs  propose.rs
programs/clear-wallet/src/state/: intent.rs  proposal.rs  wallet.rs
programs/clear-wallet/src/utils/: definition.rs  message.rs  mod.rs
